force-app/main/default/objects/Payment_Plan__c/fields/Account_Holder_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Address__c</fullName>
    <description>Bank Account Holders Address</description>
    <label>Account Holder Address</label>
    <type>TextArea</type>
</CustomField>