force-app/main/default/objects/Payment_Plan__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <description>Name On Bank Account</description>
    <label>Account Holder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>