force-app/main/default/objects/Payment_Plan__c/fields/Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid__c</fullName>
    <label>Amount paid</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>