force-app/main/default/objects/Payment_Plan__c/fields/Balance1__c.field-meta.xml
<CustomField>
    <fullName>Balance1__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>