force-app/main/default/objects/Payment_Plan__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <label>Bank Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>