force-app/main/default/objects/Payment_Plan__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>