force-app/main/default/objects/Payment_Plan__c/fields/No_of_Payments_Expected__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments_Expected__c</fullName>
    <label>No of Payments Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>