force-app/main/default/objects/Payment_Plan__c/fields/No_of_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments_Received__c</fullName>
    <label>No of Payments Received</label>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>