force-app/main/default/objects/Payment_Plan__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plans (Payment Account)</relationshipLabel>
    <relationshipName>Payment_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>