force-app/main/default/objects/Payment_Plan__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan Completion Date</label>
    <type>Date</type>
</CustomField>