force-app/main/default/objects/Payment_Plan__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>