force-app/main/default/objects/Payment_Plan__c/fields/Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Name__c</fullName>
    <label>Payment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>