force-app/main/default/objects/Payment_Plan__c/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>