force-app/main/default/objects/Payment_Plan__c/fields/Swift_or_BIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_or_BIC_Code__c</fullName>
    <label>Swift or BIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>