force-app/main/default/objects/Payment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Marina</value>
    </filters>
    <label>All</label>
</ListView>